<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_cat_close_range">

    </PreferenceCategory>
    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_switch_flash"
        android:title="@string/pref_activate_flash" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_message_default_value"
        android:inputType="textAutoComplete"
        android:key="pref_message"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_message_title" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue=""
        android:title="@string/pref_ring_title"
        android:key="pref_ringtone" />

    <PreferenceCategory android:title="@string/pref_cat_time">
        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/pref_enable_time"
            android:key="pref_switch_time"
            android:summary="@string/pref_enable_time_summary" />

        <com.example.flaforgue.geophone.preferences.TimePreference
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_time"
            android:key="pref_time"
            android:id="@+id/txtTime"
            android:dependency="pref_switch_time" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_archive">

        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/pref_archive_title"
            android:key="pref_switch_archive"
            android:summary="@string/pref_archive_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_security">

        <EditTextPreference
            android:defaultValue="@string/pref_password_default_value"
            android:selectAllOnFocus="true"
            android:inputType="numberPassword"
            android:singleLine="true"
            android:title="@string/pref_password_title"
            android:key="pref_password" />
    </PreferenceCategory>


</PreferenceScreen>
