<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->

    <PreferenceCategory android:title="@string/pref_cat_contact_1">

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:singleLine="true"
            android:title="@string/pref_contact_name"
            android:key="pref_contact_name_1" />
        <EditTextPreference
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:singleLine="true"
            android:title="@string/pref_contact_number"
            android:key="pref_contact_number_1"
            android:dependency="pref_contact_name_1" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_contact_2">

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:singleLine="true"
            android:title="@string/pref_contact_name"
            android:key="pref_contact_name_2"
            android:dependency="pref_contact_number_1" />
        <EditTextPreference
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:singleLine="true"
            android:title="@string/pref_contact_number"
            android:key="pref_contact_number_2"
            android:dependency="pref_contact_name_2" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_contact_3">

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:singleLine="true"
            android:title="@string/pref_contact_name"
            android:key="pref_contact_name_3"
            android:dependency="pref_contact_number_2" />
        <EditTextPreference
            android:defaultValue="Default value"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:singleLine="true"
            android:title="@string/pref_contact_number"
            android:key="pref_contact_number_3"
            android:dependency="pref_contact_name_3" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_contact_4">

        <EditTextPreference
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:singleLine="true"
            android:title="@string/pref_contact_name"
            android:key="pref_contact_name_4"
            android:dependency="pref_contact_number_3" />
        <EditTextPreference
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:singleLine="true"
            android:title="@string/pref_contact_number"
            android:key="pref_contact_number_4"
            android:dependency="pref_contact_name_4" />
    </PreferenceCategory>
</PreferenceScreen>
