<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.flaforgue.geophone.activities.HomeActivity">

    <Button
        android:text="@string/find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/findBtn"
        android:textSize="18sp"
        android:layout_above="@+id/optionsBtn"
        android:layout_alignStart="@+id/numberInput"
        android:layout_marginBottom="30dp"
        android:layout_alignEnd="@+id/numberInput" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/numberInput"
        android:background="@android:drawable/toast_frame"
        android:hint="@string/number"
        android:textSize="24sp"
        android:textColorLink="@android:color/background_light"
        android:textColor="@android:color/white"
        android:layout_marginBottom="61dp"
        android:layout_alignBottom="@+id/findBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Button"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:id="@+id/firstBtn"
        android:textSize="12sp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:layout_alignStart="@+id/numberInput"
        android:visibility="gone"/>

    <Button
        android:text="Button"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:id="@+id/secondBtn"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"
        android:layout_alignEnd="@+id/numberInput"
        android:visibility="gone" />

    <Button
        android:text="Button"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:id="@+id/thirdBtn"
        android:textSize="12sp"
        android:layout_alignStart="@+id/firstBtn"
        android:layout_below="@+id/firstBtn"
        android:visibility="gone" />

    <Button
        android:text="Button"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:id="@+id/fourthBtn"
        android:textSize="12sp"
        android:layout_alignStart="@+id/secondBtn"
        android:layout_below="@+id/secondBtn"
        android:visibility="gone" />

    <TextView
        android:text="@string/favourite_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginRight="62dp"
        android:layout_marginLeft="62dp"
        android:id="@+id/txtAddContact"
        android:textAlignment="center"
        android:textColor="?android:attr/colorPrimaryDark"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/gear"
        android:layout_marginBottom="32dp"
        android:id="@+id/optionsBtn"
        app:backgroundTint="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/findBtn"
        android:layout_marginStart="50dp" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/map"
        android:layout_marginBottom="32dp"
        android:id="@+id/mapBtn"
        app:backgroundTint="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/findBtn"
        android:layout_marginEnd="50dp" />

</RelativeLayout>
